CRM-4499 - working on contact view mockup
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21377 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/mockups/contact/contactView1mini.html
+++ b/mockups/contact/contactView1mini.html
@@ -3,7 +3,7 @@
 
   
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title> Mr John Gerard Notdoe-Longnameactually Jr | My Drupal website</title>
+    <title> John Doe | My Drupal website</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <style type="text/css">@import url(contactView1_files/theme.css);</style>
 </head>
@@ -60,7 +60,7 @@
 
   <div class="content"><div id="recently-viewed">
     <ul>
-             <li><img src="contactView1_files/Individual.png" title="Individual" alt="Individual"><a href="." title="Mr John Gerard Notdoe-Longnameactually Jr">Mr John Gerard Notdoe-Lon..</a></li>
+             <li><img src="contactView1_files/Individual.png" title="Individual" alt="Individual"><a href="." title="John Doe">Mr John Gerard Notdoe-Lon..</a></li>
              <li><img src="contactView1_files/Individual.png" title="Individual" alt="Individual"><a href="." title="Ms Donald A Patel Sr">Ms Donald A Patel Sr</a></li>
              <li><img src="contactView1_files/Household.png" title="Household" alt="Household"><a href="." title="Bill Roberts's home">Bill Roberts's home</a></li>
              <li><img src="contactView1_files/Group.png" title="Group" alt="Group"><a href="." title="Some group">Some group</a></li>
@@ -222,7 +222,7 @@ a specific table / type of record. Wildcards are automatically added to your sea
           <div class="breadcrumb"><a href="http://localhost/drupal/">Home</a> › <a href="http://localhost/drupal/civicrm?reset=1">CiviCRM</a> › <a href="http://localhost/drupal/civicrm/contact/view?reset=1&amp;cid=102">View Contact</a> › <a href="http://localhost/drupal/civicrm/contact/search/basic?force=1">Search Results</a></div>		  
 
 <div class="clear-block">
-<h2><img src="contactView1_files/contact_ind.gif" alt="Individual"> Mr John Gerard Notdoe-Longnameactually Jr</h2>            
+<h2><img src="contactView1_files/contact_ind.gif" alt="Individual"> John Doe</h2>            
 <div id="crm-container" xml:lang="en" lang="en">
                                     
 <link rel="stylesheet" href="contactView1_files/civicrm.css" type="text/css">
@@ -400,77 +400,26 @@ function getSearchURLValue( )
 
   <div id="contactName">
 	<!--<a href="javascript:alert('Goes to contact edit screen, opening appropriate section')" title="Edit this group of fields"><img style="float:right;" src="contactView1_files/edit-icon.png" alt="Edit this group of fields"></a> -->
-    <span title="Full Name"><b>Mr John Gerard Notdoe-Longnameactually Jr</b></span><br/>
-    <span class="label">Position:</span><span>trainer</span>
+    <span title="Full Name"><b>John Doe</b></span><br/>
     <span class="label">Employer:</span><a href="." title="view current employer">Compasspoint</a>
-	<span class="label">Nickname:</span><span>Johnny</span><br/>
   </div> <!-- #contactName -->
 
-  <div id="contact_panel">
-      <div id="contactCardLeft">
-	    <table>
-	      <tr>		
-	        <td width="28%" class="label last">Tags:</td>
-		    <td class="last">Major Donor, Volunteer</td>
-	      </tr>
-		</table>
-	  </div> <!-- #contactCardLeft -->
-      <div id="contactCardRight">
-        <table>  
-		    <td width="28%" class="label last">Source:</td>
-		    <td class="last">related through friend</td>		  
-	      </tr>
-		</table>
-      </div> <!-- #contactCardRight -->
-	  <div style="clear: both"></div>
-  </div> <!-- #contact_panel -->
-
-  <div style="border-bottom: 2px solid grey;"></div>
+  <div style="border-bottom: 1px solid grey;"></div>
 
   <div id="contact_panel">
       <div id="contactCardLeft">
 	    <table>
           <tr style="background-color: #F4F4F4">
-		    <td width="28%" class="label">Work phone: </td>
-		    <td width="72%"title="Primary phone"><span class="primary">+28371094712</span></td>
-	      </tr>
-          <tr>
-		    <td class="label">Mobile: </td>
-		    <td>+243912620705</td>
-	      </tr>
-
-          <tr style="background-color: #F4F4F4;">
-		    <td width="28%" class="label">Skype:</td>
-		    <td width="72%">johnny234</td>
-          </tr>
-		  <tr>	  
-		    <td class="label">MSN:</td>
-		    <td>john@longnameactually.org</td>
-	      </tr>
-		  <tr style="background-color: #F4F4F4;">
-		    <td class="label last">AIM: </td>
-		    <td  class="last" title="Primary instant messenger"><span class="primary">johnny5423</span></td>
-	      </tr>
-		  
+		    <td width="28%" class="label last">Work phone: </td>
+		    <td width="72%" class="last" title="Primary phone"><span class="primary">+28371094712</span></td>
+	      </tr>		  
 		</table>
 	  </div> <!-- #contactCardLeft -->
       <div id="contactCardRight">
         <table>
 	      <tr style="background-color: #F4F4F4;">
-		    <td  width="28%" class="label">Email:</td>
-	        <td title="Primary email address"><span class="primary"><a href="mailto:john@longnameactually.org">john@longnameactually.org</a> (Bulk)</span></td>
-	      </tr>
-	      <tr>
-	        <td class="label">Email:</td>
-	        <td class="onHold"><a href="mailto:johndoe@privmail.com">johndoe@privmail.com</a> <img src="contactView1_files/stop-icon.png" title="This email is on hold due to bounces." align="top"> (Bulk)</td>
-	      </tr>
-	      <tr style="background-color: #F4F4F4;">
-		    <td class="label">Email:</td>
-		    <td><a href="mailto:email@other.net">email@other.net</a></td>
-	      </tr>
-		  <tr>
-	        <td class="label last">Website:</td>
-		    <td class="last"><a href="http://longnameactually.org/" target="_blank">http://longnameactually.org/</a></td>
+		    <td  width="28%" class="label last">Email:</td>
+	        <td class="last" title="Primary email address"><span class="primary"><a href="mailto:john@doe.org">john@doe.org</a></span></td>
 	      </tr>
 		</table>
       </div> <!-- #contactCardRight -->
@@ -478,70 +427,18 @@ function getSearchURLValue( )
   </div> <!-- #contact_panel -->
 
   <div style="border-bottom: 2px solid grey"></div>
-
-  <div id="contact_panel">
-
-    <div id="contactCardLeft">
-      <table>
-          <tr>
-		    <td width="28%" class="label last">Work <br/> Address:</td>
-		    <td width="72%"  class="last">
-              <span class="street-address">Some Street 2</span><br>
-              <span class="extended-address">Building 8</span><br>
-              <span class="extended-address">Second Crossing</span><br>
-              <span class="locality">Bangalore</span>, <span class="region">AL</span> <span class="postal-code">38942374</span><br>
-              <span class="country-name">United States</span>
-			</td>
-  	      </tr>
-      </table>
-    </div>
-    <div id="contactCardRight">
-        <table>
-          <tr>
-		    <td width="28%" class="label last">Home <br/> Address:</td>
-		    <td width="72%" class="last">
-            <span class="street-address">Another Blvd</span><br>
-            <span class="locality">San Francisco</span>, <span class="region">CA</span> <span class="postal-code">95829-393</span><br>
-            <span class="country-name">United States</span>			
-			</td>
-          </tr>
-		</table>
-    </div> <!-- #contactCardRight -->
-	<div style="clear: both"></div>
-  </div>
-
-  <div style="border-bottom: 2px solid grey"></div>
-  
   <div id="contact_panel">
     <div id="contactCardLeft">
       <table>
-          <tr style="background-color: #F4F4F4;">
-		    <td width="28%" class="label">Privacy:</td>
-		    <td width="72%">
-              <span class="font-red upper">Do not phone <br/> Do not email <br/> Do not trade</span>
-			</td>
-		  </tr>
-          <tr>
-		    <td width="28%" class="label">Method:</td>
-		    <td width="72%">Postal Mail, Fax</td>
-          </tr>
-          <tr style="background-color: #F4F4F4;">
-		    <td width="28%" class="label last">Email Format:</td>
-		    <td width="72%" class="last">Both</td>
-  	      </tr>
       </table>
     </div>
     <div id="contactCardRight">
         <table>
           <tr style="background-color: #F4F4F4;">
-		    <td width="28%" class="label">Gender:</td>
-		    <td width="72%">Male</td>
-          </tr>
-          <tr>
 		    <td width="28%" class="label">Date of Birth:</td>
 		    <td width="72%"> March 12th, 1977</td>
           </tr>
-          <tr style="background-color: #F4F4F4;">
+          <tr>
 		    <td width="28%" class="label last">Age:</td>
 		    <td width="72%" class="last">32 years</td>
           </tr>
@@ -571,72 +468,10 @@ function getSearchURLValue( )
 		    <td class="label">Marriage Date:</td>
 		    <td>May 4th, 1998</td>
   	      </tr>
-
-          <tr>
-		    <td colspan="2" class="grouplabel" style="padding-top: 20px;">Yet Another Custom Fields Group With Pretty Long Name </td>
-		  </tr>	  
-          <tr style="background-color: #F4F4F4;">
-		    <td width="28%" class="label">Most Important Issue:</td>
-		    <td>Education</td>
-		  </tr>
-          <tr>
-		    <td class="label">Marital Status:</td>
-		    <td>Married</td>
-          </tr>
-
-
       </table>
     </div>
     <div id="contactCardRight">
         <table>
-          <tr>
-		    <td colspan="2" class="grouplabel">Other Custom Data Group</td>
-		  </tr>		
-          <tr style="background-color: #F4F4F4;">
-		    <td colspan="2" class="label talabel">First Field:</td>
-		  </tr>
-		  <tr style="background-color: #F4F4F4;">
-		    <td colspan="2">The Very Value of the very first field, being pretty long and elaborate (probably the custom field is of a Note type), so we can see how does it look, when we have really long text stored.</td>
-		  </tr>
-          </tr>
-          <tr>
-		    <td width="28%" class="label">Second Field:</td>
-		    <td>Yes</td>
-          </tr>
-          <tr style="background-color: #F4F4F4;">
-		    <td class="label">Third Field:</td>
-		    <td>42</td>
-          </tr>
-          <tr>
-		    <td class="label">Fourth Field:</td>
-		    <td>Costarica</td>
-          </tr>
-          <tr style="background-color: #F4F4F4;">
-		    <td class="label">Fifth Field:</td>
-		    <td>600 USD</td>
-          </tr>		  
-          <tr>
-		    <td  colspan="2" class="label talabel">First Field Repeated:</td>
-		  </tr>
-		  <tr>
-		    <td colspan="2">The Very Value of the very first field, being pretty long and elaborate, so we can see how does it look, when we have really long text stored.</td>
-		  </tr>
-          <tr style="background-color: #F4F4F4;">
-		    <td class="label">Second Field Repeated:</td>
-		    <td>Yes</td>
-          </tr>
-          <tr>
-		    <td class="label">Third Field Repeated:</td>
-		    <td>42</td>
-          </tr>
-          <tr style="background-color: #F4F4F4;">
-		    <td class="label">And so on:</td>
-		    <td>Costarica</td>
-          </tr>
-          <tr>
-		    <td class="label">Until we have 10:</td>
-		    <td>600 USD</td>
-          </tr>		  		  
 		</table>
 	</div>
 	<div style="clear: both"></div>
@@ -681,7 +516,7 @@ function getSearchURLValue( )
  </div>
      <div class="footer" id="record-log">
     <span class="col1">&nbsp; &nbsp;CiviCRM ID:&nbsp;102</span>
-            Last Change by <a href=".">Mr John Gerard Notdoe-Longnameactually Jr</a> (May 12th, 2009 11:48 AM) &nbsp;
+            Last Change by <a href=".">John Doe</a> (May 12th, 2009 11:48 AM) &nbsp;
 		    <a href=".">» View Change Log</a>
 	        </div>
 
