CRM-4499 - working on contact view mockup
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21417 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/mockups/contact/contactView1.html
+++ b/mockups/contact/contactView1.html
@@ -438,27 +438,25 @@ function getSearchURLValue( )
 		    <td class="label">Mobile: </td>
 		    <td>+243912620705</td>
 	      </tr>
-
-          <tr style="background-color: #F4F4F4;">
-		    <td width="28%" class="label">Skype:</td>
-		    <td width="72%">johnny234</td>
-          </tr>
-		  <tr>	  
-		    <td class="label">MSN:</td>
-		    <td>john@longnameactually.org</td>
-	      </tr>
-		  <tr style="background-color: #F4F4F4;">
+ 	      <tr style="background-color: #F4F4F4;">
 		    <td class="label last">AIM: </td>
 		    <td  class="last" title="Primary instant messenger"><span class="primary">johnny5423</span></td>
 	      </tr>
-		  
+          <tr>
+		    <td width="28%" class="label">Skype:</td>
+		    <td width="72%">johnny234</td>
+          </tr>
+		  <tr style="background-color: #F4F4F4;">	  
+		    <td class="label">MSN:</td>
+		    <td>john@longnameactually.org</td>
+	      </tr>
 		</table>
 	  </div> <!-- #contactCardLeft -->
       <div id="contactCardRight">
         <table>
 	      <tr style="background-color: #F4F4F4;">
 		    <td  width="28%" class="label">Email:</td>
-	        <td title="Primary email address"><span class="primary"><a href="mailto:john@longnameactually.org">john@longnameactually.org</a> (Bulk)</span></td>
+	        <td title="Primary email address"><span class="primary"><a href="mailto:john@longnameactually.org">john@longnameactually.org</a></span></td>
 	      </tr>
 	      <tr>
 	        <td class="label">Email:</td>
