--- a/mockups/contact/contactView1.html
+++ b/mockups/contact/contactView1.html
@@ -438,18 +438,10 @@ function getSearchURLValue( )
 		    <td class="label">Mobile: </td>
 		    <td>+243912620705</td>
 	      </tr>
- 	      <tr style="background-color: #F4F4F4;">
-		    <td class="label last">AIM: </td>
-		    <td  class="last" title="Primary instant messenger"><span class="primary">johnny5423</span></td>
-	      </tr>
-          <tr>
-		    <td width="28%" class="label">Skype:</td>
-		    <td width="72%">johnny234</td>
+          <tr style="background-color: #F4F4F4;">
+		    <td width="28%" class="label last">Skype:</td>
+		    <td width="72%" class="last primary" title="Primary instant messenger">johnny234</td>
           </tr>
-		  <tr style="background-color: #F4F4F4;">	  
-		    <td class="label">MSN:</td>
-		    <td>john@longnameactually.org</td>
-	      </tr>
 		</table>
 	  </div> <!-- #contactCardLeft -->
       <div id="contactCardRight">
@@ -462,11 +454,7 @@ function getSearchURLValue( )
 	        <td class="label">Email:</td>
 	        <td class="onHold"><a href="mailto:johndoe@privmail.com">johndoe@privmail.com</a> <img src="contactView1_files/stop-icon.png" title="This email is on hold due to bounces." align="top"> (Bulk)</td>
 	      </tr>
-	      <tr style="background-color: #F4F4F4;">
-		    <td class="label">Email:</td>
-		    <td><a href="mailto:email@other.net">email@other.net</a></td>
-	      </tr>
-		  <tr>
+		  <tr style="background-color: #F4F4F4;">
 	        <td class="label last">Website:</td>
 		    <td class="last"><a href="http://longnameactually.org/" target="_blank">http://longnameactually.org/</a></td>
 	      </tr>
@@ -516,7 +504,7 @@ function getSearchURLValue( )
           <tr style="background-color: #F4F4F4;">
 		    <td width="28%" class="label">Privacy:</td>
 		    <td width="72%">
-              <span class="font-red upper">Do not phone <br/> Do not email <br/> Do not trade</span>
+              <span class="font-red upper">Do not phone <br/> Do not trade</span>
 			</td>
 		  </tr>
           <tr>
