moved the h2 icon to the css, and added icons on the edit and delete buttons
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21879 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/mockups/contact/contactView3.html
+++ b/mockups/contact/contactView3.html
@@ -470,10 +470,8 @@
                 Search Results</a>
               </div>
 
-              <div class="clear-block">
-                <h2><img alt="Individual" src=
-                "contactView3_files/contact_ind.gif" /> Mr John
-                Gerard Notdoe-Longnameactually Jr</h2>
+              <div id="contact_102" class="individual clear-block">
+                <h2>Mr John Gerard Notdoe-Longnameactually Jr</h2>
 
                 <div id="crm-container" lang="en" xml:lang="en">
                   <script type="text/javascript">
@@ -660,11 +658,11 @@
                         <span id="actions"><input accesskey="E"
                         onclick=
                         "window.location='/drupal/civicrm/contact/add?reset=1&amp;action=update&amp;cid=102';"
-                        value="Edit" type="button" name=
+                        value="Edit" class="edit button" type="button" name=
                         "edit_contact_info" /> <input onclick=
                         "window.location='/drupal/civicrm/contact/view/delete?reset=1&amp;delete=1&amp;cid=102';"
                         value="Delete" type="button" name=
-                        "contact_delete" /> <select id=
+                        "contact_delete" class="delete button" /> <select id=
                         "other_activity" class="form-select"
                         onchange=
                         "if (this.value) window.location='/drupal/civicrm/contact/view/activity?action=add&amp;reset=1&amp;cid=102&amp;selectedChild=activity&amp;atype='+ this.value; else return false"
@@ -686,7 +684,7 @@
                           </option>
                         </select> &nbsp;&nbsp; <span class=
                         "label">Go to:</span> <input value=
-                        "Contact Dashboard" type="button" />
+                        "Dashboard" type="button" />
                         <input value="User Record" type=
                         "button" /></span> <span id=
                         "icons"><a title=
