CRM-4606 css integration
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21942 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/mockups/contact/contactView3.html
+++ b/mockups/contact/contactView3.html
@@ -756,8 +756,7 @@
                                 </tr>
 
                                 <tr>
-                                  <td class="label last" width=
-                                  "28%">Skype</td>
+                                  <td class="label last">Skype</td>
 
                                   <td class="last primary" title=
                                   "Primary instant messenger"
@@ -812,8 +811,7 @@
                             <table>
                               <tbody>
                                 <tr>
-                                  <td class="label last" width=
-                                  "28%">Work Address</td>
+                                  <td class="label last">Work Address</td>
 
                                   <td class="last" width="72%">
                                   <span class="street-address">Some
@@ -841,8 +839,7 @@
                             <table>
                               <tbody>
                                 <tr>
-                                  <td class="label last" width=
-                                  "28%">Home Address</td>
+                                  <td class="label last">Home Address</td>
 
                                   <td class="last" width="72%">
                                   <span class=
@@ -881,15 +878,14 @@
 
                                 <tr>
                                   <td class="label">
-                                  Method:</td>
+                                  Method</td>
 
                                   <td width="72%">Postal Mail,
                                   Fax</td>
                                 </tr>
 
                                 <tr>
-                                  <td class="label last" width=
-                                  "28%">Email Format</td>
+                                  <td class="label last">Email Format</td>
 
                                   <td class="last" width="72%">
                                   Both</td>
