--- a/install/template.html
+++ b/install/template.html
@@ -91,7 +91,15 @@ create the database for you; otherwise, you must give the name of a database tha
       echo "<option value='$locale' $selected>$language</option>";
     }
   ?>
-</select><br />
+</select>
+<span class="testResults">
+  <?php
+    if (count($langs) < 2) {
+      $parts = explode(' ', $civicrm_version);
+      echo "(download the civicrm-{$parts[0]}-l10n.tar.gz file and unzip into CiviCRM’s directory to add languages here)";
+    }
+  ?>
+</span><br />
     <label for="loadGenerated"><span>Load sample data:</span><input id="loadGenerated" type="checkbox" name="loadGenerated" value=1 <?php if ( $loadGenerated == 1 ) { echo "checked='checked'"; } ?></label> <br />
     <span class="testResults">Check this box to pre-populate CiviCRM with sample English contact records, online contribution pages, profile forms, etc. These examples can help you learn about CiviCRM features.</span><br />
 </p>
