svn merge -r 23206:23234 http://svn.civicrm.org/civicrm/branches/gsoc-multilingual
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23235 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/install/template.html
+++ b/install/template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <title>CiviCRM Installer</title>
 <script>
 function show(id) {
@@ -83,8 +84,24 @@ create the database for you; otherwise, you must give the name of a database tha
 <h4>Other Settings</h4>
 <p style="margin-left: 2em" id="misc_credentials" > 
 <!--style="display: none"-->
+<label for="seedLanguage"><span>Language of basic data:</span></label><select id="seedLanguage" name="seedLanguage">
+  <?php
+    foreach ($langs as $locale => $language) {
+      $selected = ($locale == $seedLanguage) ? 'selected="selected"' : '';
+      echo "<option value='$locale' $selected>$language</option>";
+    }
+  ?>
+</select>
+<span class="testResults">
+  <?php
+    if (count($langs) < 2) {
+      $parts = explode(' ', $civicrm_version);
+      echo "(download the civicrm-{$parts[0]}-l10n.tar.gz file and unzip into CiviCRM’s directory to add languages here)";
+    }
+  ?>
+</span><br />
     <label for="loadGenerated"><span>Load sample data:</span><input id="loadGenerated" type="checkbox" name="loadGenerated" value=1 <?php if ( $loadGenerated == 1 ) { echo "checked='checked'"; } ?></label> <br />
-    <span class="testResults">Check this box to pre-populate CiviCRM with sample contact records, online contribution pages, profile forms, etc. These examples can help you learn about CiviCRM features.</span><br /> 
+    <span class="testResults">Check this box to pre-populate CiviCRM with sample English contact records, online contribution pages, profile forms, etc. These examples can help you learn about CiviCRM features.</span><br />
 </p>
 
 <p style="margin-left: 2em"><input type="submit" value="Re-check requirements" /></p>
