- fix for CRM-5152
git-svn-id: http://svn.civicrm.org/civicrm/branches/v3.0@23936 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/standalone/login.html
+++ b/standalone/login.html
@@ -4,6 +4,7 @@
 <head>
   <title>CiviCRM User Authentication</title>
   <link media="screen" title="Default" type="text/css" href="../packages/jquery/css/openid-selector.css" rel="stylesheet">
+  <link rel="Shortcut Icon" type="image/x-icon" href="../i/widget/favicon.png" />
   <script type="text/javascript" src="../packages/jquery/jquery.js"></script>
   <script type="text/javascript" src="../packages/jquery/plugins/openid-selector.js"></script>
 </head>
